feat: Support nested oneOf-types; allOf-types

--- a/snapshotTests/openid-configuration.yaml
+++ b/snapshotTests/openid-configuration.yaml
@@ -374,6 +374,7 @@ components:
         name:
           type: string
         email:
+          type: string
           format: email
       required:
         - sub
