feature: writeOnly fields
* Centralized naming conventions in language specific generator

--- a/snapshotTests/websockets.yaml
+++ b/snapshotTests/websockets.yaml
@@ -43,6 +43,9 @@ components:
         - $ref: '#/components/schemas/UpdatePersonCommand'
       discriminator:
         propertyName: command
+        mapping:
+          createPerson: CreatePersonCommand
+          updatePerson: UpdatePersonCommand
     CreatePersonCommand:
       properties:
         command:
